--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
+    "dotenv": "^6.2.0",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.4"
